<resources>
    <string name="app_name">Tienda</string>
    <string name="urlCatalogo" translatable="false">https://www.serverbpw.com/cm/2020-2/products.php</string>
    <string name="id" translatable="false">id</string>
    <string name="name" translatable="false">name</string>
    <string name="price" translatable="false">price</string>
    <string name="delivery" translatable="false">delivery</string>
    <string name="provider" translatable="false">provider</string>
    <string name="thumbnail_url" translatable="false">thumbnail_url</string>
    <string name="descripcion">Descripción de contenido</string>
    <string name="nombre">Nombre</string>
    <string name="precio">Precio: %.02f</string>
    <string name="envio">Envio: %.02f</string>
    <string name="proveedor">Proveedor</string>
    <string name="urlDescrip" translatable="false">https://www.serverbpw.com/cm/2020-2/product_detail.php?id=</string>
    <string name="imag_url" translatable="false">imag_url</string>
    <string name="desc" translatable="false">desc</string>
    <string name="error">Error: no se pudo acceder al servidor</string>
    <string name="buscar">Buscar</string>
    <string name="info">Información</string>
    <string name="mensaje">Esta aplicación fue desarrollada por: Castro Molano Ramsés</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="producto">Producto</string>
    <string name="tienda">Tienda Variada :3</string>
    <string name="url_img" translatable="false">url_img</string>
    <string name="imagen">Imagen</string>
    <string name="posicion" translatable="false">posicion</string>
</resources>
